# pinkie

./: LICENSE  README.md
blog/: config.toml  netlify.toml
blog/content/writing/: goodbye.md  hello.md
docs/: mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt
docs/content/assets/css/: custom.css
notes/: _home.md
pinkie/: README.md  go.mod  main.go
site/: custom.css  index.html  netlify.toml
