[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
mkdocs = "^1.4.1"
mkdocs-material = "^8.5.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
